--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ mode: dark # default theme "dark" | "light"
 author:
   name: Renan Nguyễn # author name
   bio: >- # tell to the world
-    Hi, I'm an Electrical - Electrolnic - Embedded Software Engineer base in Viet Nam. I'm currently working in Japan. <a href="https://github.com/piharpi/jekyll-klise" target="_blank" rel="noopener">@github</a>.
+    Hi, I'm an Electrical - Electrolnic - Embedded Software Engineer base in Viet Nam. I'm currently working in Japan. <a href="https://github.com/Renan-TP" target="_blank" rel="noopener">@github</a>.
   username: username # general username
   github: Renan-TP # github username
   twitter: twitter_username # twitter username
